Ran prettier and fixed lint errors

--- a/gen-app-builder/search-web-app/static/index.css
+++ b/gen-app-builder/search-web-app/static/index.css
@@ -61,7 +61,8 @@ body {
   margin: auto;
 }
 
-.language-selection, .document-selection {
+.language-selection,
+.document-selection {
   display: flex;
   width: 300px;
   margin: auto;
