--- a/gen-app-builder/search-web-app/templates/search.html
+++ b/gen-app-builder/search-web-app/templates/search.html
@@ -255,10 +255,11 @@
         >
       </p>
       <p>
-        Powered by <a
-          href="https://cloud.google.com/generative-ai-app-builder"
+        Powered by
+        <a href="https://cloud.google.com/generative-ai-app-builder"
           >Generative AI App Builder</a
-        > on <a href="https://cloud.google.com/">Google Cloud</a>
+        >
+        on <a href="https://cloud.google.com/">Google Cloud</a>
       </p>
     </section>
   </body>
