--- a/gen-app-builder/search-web-app/templates/ekg.html
+++ b/gen-app-builder/search-web-app/templates/ekg.html
@@ -367,10 +367,12 @@
         >
       </p>
       <p>
-        Powered by <a
+        Powered by
+        <a
           href="https://cloud.google.com/enterprise-knowledge-graph/docs/overview"
           >Enterprise Knowledge Graph</a
-        > on <a href="https://cloud.google.com/">Google Cloud</a>
+        >
+        on <a href="https://cloud.google.com/">Google Cloud</a>
       </p>
     </section>
   </body>
